# vrcrypt

./: .gitignore  Makefile  README.md  VRCrypt.csproj  b.bat  link.sh  ref.sh
lib/vrcrypt_lib/: .gitignore  Cargo.toml
lib/vrcrypt_lib/macros/ffi_fn/: .gitignore  Cargo.toml
lib/vrcrypt_lib/macros/unsafe_fn/: Cargo.toml
lib/vrcrypt_lib/macros/unsafe_fn/src/: lib.rs
lib/vrcrypt_lib/src/: bind.rs  constants.rs  data.rs  lib.rs  utils.rs
lib/vrcrypt_lib/src/cmd/: create_random_meshes.rs  mod.rs
lib/vrcrypt_lib/src/mesh/: mod.rs  randomize.rs
lib/vrcrypt_lib/tests/: bindings.rs
libs/vrcrypt_lib/macros/ffi_fn/src/: lib.rs
libs/vrcrypt_lib/src/: lib.rs  utils.rs
libs/vrcrypt_lib/src/mesh/: decrypt.rs  encrypt.rs  mod.rs  randomize.rs
src/: BlendShapeData.cs  FFI.cs  Utils.cs  XBlendShape.cs  XGameObject.cs  XMenu.cs  XMesh.cs
src/data/: XAvatar.cs  XBlendShape.cs  XBounds.cs  XColor.cs  XGameObject.cs  XMesh.cs  XSubMeshDescriptor.cs
src/data/XGameObject/: Encryption.cs  Meshes.cs  Serialization.cs  XGameObject.cs
src/data/XMesh/: Hash.cs  Serialization.cs  XMesh.cs
src/ffi/: CreateRandomMeshes.cs  MeshRandomize.cs
src/ffi/Mesh/: MeshDecrypt.cs  MeshEncrypt.cs  MeshRandomize.cs
src/utils/: GameObjectSerializer.cs  String.cs
