[package]
name = "vrcrypt_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
interoptopus = "0.14.18"
interoptopus_backend_csharp = "0.14.18"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
ffi_fn = { path = "macros/ffi_fn" }
